默认值为空时不为 el 元素赋值
默认值为空时不为 el 元素赋值
减少 CSS 样式嵌套

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<div class="div">
 		<h3><label for="demo3">联动</label></h3>
-		<input type="text" id="demo3">
+		<input type="text" id="demo3" placeholder="点击选择">
 	</div>
 </form>
 
