--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p><input type="text" id="demo2"></p>
 
     <h3><label for="demo3">联动</label></h3>
-    <p><input type="text" id="demo3"></p>
+    <p><input type="text" id="demo3" placeholder="点击选择"></p>
 
 <h2>
 <a id="安装" class="anchor" href="#%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装</h2>
