--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <td>onChange</td>
 <td>function</td>
 <td>null</td>
-<td>滚动导致值变化时触发，参数为选中值和该列的索引值</td>
+<td>滚动导致值变化时触发，参数为值数组和发生变化的列的索引值</td>
 </tr>
 <tr>
 <td>onSelect</td>
