--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	form div {
 		margin-bottom: 30px;
 	}
+    #wheelpicker-demo3 .wheelpicker-wheel {
+        width: 33.3%;
+    }
 	</style>
 </head>
 <body>
@@ -35,11 +38,12 @@
 	</div>
 
 	<div class="div">
-		<h3><label for="demo3">联动</label></h3>
-		<input type="text" id="demo3" placeholder="点击选择" value="蔬菜 tomato">
+		<h3><label for="demo3">城市联动</label></h3>
+		<input type="text" id="demo3" placeholder="点击选择">
 	</div>
 </form>
 
+<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script>
 <script src="./dist/wheelpicker.min.js"></script>
 <script>
 var frutis = "西瓜,柠檬,草莓,荔枝,橘子,菠萝,香蕉,柚子,苹果,龙眼".split(",");
@@ -78,34 +82,49 @@ var picker2 = new WheelPicker({
     value: ["lemon", "carrot"]
 });
 
-var picker3 = new WheelPicker({
-    el: "#demo3",
-    hideOnBackdrop: true,
-    hiddenInput: true,
-    data: [
-        ["水果", "蔬菜"],
-        vegetableData
-    ],
-    onChange: function(selected, index) {
-        console.log("onChange", selected, index);
+fetch("https://cdn.jsdelivr.net/gh/modood/Administrative-divisions-of-China/dist/pca.json")
+    .then(function(response) {
+        return response.json();
+    })
+    .then(function(data) {
+        var defaultProv = Object.keys(data)[0];
 
-        if (index === 0) {
-            this.setData(selected[index].value == "水果" ? frutiData : vegetableData, 1);
-        }
-    },
-    onSelect: function(selected) {
-        console.log("onSelect", selected);
-    },
-    onShow: function() {
-        console.log("onShow");
-    },
-    onCancel: function() {
-        console.log("onCancel");
-    },
-    formatValue: function(value) {
-        return value[0] + "：" + value[1];
-    }
-});
+        var picker3 = new WheelPicker({
+            el: "#demo3",
+            hideOnBackdrop: true,
+            hiddenInput: true,
+            data: [
+                Object.keys(data),
+                Object.keys(data[defaultProv]),
+                data[defaultProv][Object.keys(data[defaultProv])[0]]
+            ],
+            onChange: function(index, selected) {
+                console.log("onChange", index, selected);
+
+                if (index === 0) {
+                    var cityObj = data[selected.value];
+                    var cities = cityObj ? Object.keys(cityObj) : [];
+                    this.setData(cities, 1);
+                    this.setData(cities.length ? cityObj[cities[0]] : [], 2);
+                } else if (index === 1) {
+                    var prov = this.getSelectedItems()[0];
+                    this.setData(data[prov.value][selected.value], 2);
+                }
+            },
+            onSelect: function(selected) {
+                console.log("onSelect", selected);
+            },
+            onShow: function() {
+                console.log("onShow");
+            },
+            onCancel: function() {
+                console.log("onCancel");
+            },
+            formatValue: function(value) {
+                return value.join(" ");
+            }
+        });
+    });
 </script>
 
 <script>
